--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ button{
     border-radius: 20px;
     display: block;
     border: .5px  light black;
+    font-size: 12px;
 }
          
 
@@ -118,4 +119,49 @@ button:hover {
     width: 50px;
     font-size: 1rem;
     color: black;
+}
+
+@media screen and (max-width : 900px) {
+    body{
+        overflow-x: hidden;
+    }
+    
+    h1{
+        font-size: 1.5rem;
+    }
+    form{
+        margin-top: 20vh;
+        flex-direction: column;
+    }
+    #submit{
+        height: 50px;
+        width: 100px;
+        border-radius: 10px;
+        font-size: 14px;
+    }
+    #player-list{
+        margin-top: 20vh;
+        width: 110%;
+    }
+    .card{
+        font-size: 14px;
+        gap: 10px;
+        padding: 10px;
+    }
+    #player-list > li > div > button{
+        cursor: pointer;
+        background: transparent;
+        border: none;
+        width: 20px;
+        font-size: 14px;
+        color: black;
+    }
+    #player-list > li > button{
+        width: 20px;
+        height: 20px;
+        object-fit: cover;
+        cursor: pointer;
+        background: transparent;
+        border: none;
+    }
 }
